--- a/css/login.css
+++ b/css/login.css
@@ -89,86 +89,71 @@ body {
 		background: radial-gradient(circle, rgba(0,0,0,1) 28%, rgba(45,43,43,1) 100%);
 		color: white;
 		
-		& h3.loginText{
-			margin: 0px auto; /* Horizontal centering */
-			font-size: 30px;
-			letter-spacing: 0px;
-		}
-
-		& p.loginText{
-			font-size: 15px;
-			width: 150px;
-			margin: 1px auto; /* Horizontal centering */
-			margin-bottom: 30px;
-			background-color: rgba(4, 4, 4, 0)0, 0;
-		}
-
-		& input[type="text"], & input[type="password"] {
-			margin: 8px auto; /* Horizontal centering */
-			width: 70%; height: 6.5vh;
-			padding: 15px 20px;
-			border: 1px solid #ccc;
-			border-radius: 40px;
-		}
-
-		& a{
-			width: max-content;
-			margin: 0px 16vw; /* Horizontal centering */
-			font-size: 12px;
-			color: var(--color-positive);
-			text-align: center;
-		}
-	
-		& .signIn {
-			margin: 30px auto; /* Horizontal centering */
-			width: 70%; height: 6.5vh;
-			border: none;
-			border-radius: 40px;
-			cursor: pointer;
-			background-color: var(--color-secondary);
-			color: white;
-			transition: 0.3s;	
-
-			&:hover{
-				background-color: var(--color-hover-1);
+			& h3.loginText{
+				margin: 0px auto; /* Horizontal centering */
+				font-size: 30px;
+				letter-spacing: 0px;
 			}
-		}
 
-		& hr{
-			margin: 20px auto; /* Horizontal centering */
-			display: flex;
-			width: 30vh;
-			border: .5px solid rgb(190, 187, 187);
-		}
-		& p {
-			width: 90px;
-			text-align: center;
-			margin: 0px auto; /* Horizontal centering */
-			margin-top: -32px;
-			font-size: 14px;
-			background-color: black;
-			color: #D9D9D9;
-		}
+			& p.loginText{
+				font-size: 15px;
+				width: 150px;
+				margin: 1px auto; /* Horizontal centering */
+				margin-bottom: 30px;
+				background-color: rgba(4, 4, 4, 0)0, 0;
+			}
 
-		& .google {
-			margin: 0 auto;
-			margin-top: 20px;
-			width: 190px;
-			height: 40px;
-			background-color: #ffffff;
-			border: 1px solid gray;
-			color: black;
-			display: flex;
-			border-radius: 0px;
-			align-items: center;
-			justify-content: space-evenly;
-			border-radius: 20px;
-			padding: 0 10px;
-			cursor: pointer;
-			transition: 0.3s;
+			& input[type="text"], & input[type="password"] {
+				margin: 8px auto; /* Horizontal centering */
+				width: 70%; height: 6.5vh;
+				padding: 15px 20px;
+				border: 1px solid #ccc;
+				border-radius: 40px;
+			}
 
-			&:hover {
-				border: 1px solid var(--color-positive);
+			& a{
+				width: max-content;
+				margin: 0px 16vw; /* Horizontal centering */
+				font-size: 12px;
+				color: var(--color-positive);
+				text-align: center;
+			}
+		
+			& .signIn {
+				margin: 30px auto; /* Horizontal centering */
+				width: 70%; height: 6.5vh;
+				border: none;
+				border-radius: 40px;
+				cursor: pointer;
+				background-color: var(--color-secondary);
+				color: white;
+				transition: 0.3s;	
+
+				&:hover{
+					background-color: var(--color-hover-1);
+				}
+			}
+
+			& hr{
+				margin: 20px auto; /* Horizontal centering */
+				display: flex;
+				width: 30vh;
+				border: .5px solid rgb(190, 187, 187);
+			}
+			& p {
+				width: 90px;
+				text-align: center;
+				margin: 0px auto; /* Horizontal centering */
+				margin-top: -32px;
+				font-size: 14px;
+				background-color: black;
+				color: #D9D9D9;
+			}
+
+			& #googleBtn {
+				margin: 0 auto;
+				margin-top: 20px;
+				border: none;
 			}
 		}
 
@@ -185,4 +170,4 @@ body {
 			}
 		}
 	}
-}
+
